<resources>
    <string name="app_name">DiscSwap</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="add_game_title">Add Game to Swap</string>
    <string name="add">Add Game</string>
    <string name="add_image">Add Image</string>
    <string name="hint_title">Game Title</string>
    <string name="hint_desc">Description</string>
    <string name="hint_platform">Choose Platform</string>


    <string name="login_success">Welcome</string>
    <string name="login_fail">Something went wrong</string>

    <string name="reg_success">Succesfully Registered</string>
    <string name="reg_fail">Something went wrong</string>

    <string name="game_added">Game Added</string>

    <string name="menu_home">Swap Games</string>
    <string name="menu_gallery">My Games</string>
    <string name="menu_slideshow">Offers</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="no_games">No Games Found</string>
    <string name="title_activity_game_single_view">GameSingleVIew</string>

</resources>
